--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
     "@types/react": "^19.0.23",
     "@types/react-dom": "^19.0.13",
     "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^8.57.0",
     "chess.js": "^0.13.3",
-    "react-chessboard": "^1.2.5",
+    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "react-chessboard": "^1.2.5",
     "vite": "^6.3.5"
   }
 }
